--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,12 +3,12 @@
 :root {
     --CHARCOAL: #222b37;
     --SIDEBAR_CHARCOAL: #151b26;
-    --SIDEBAR_CHARCOAL_HIGHLIGHT: #3a4049; 
+    --SIDEBAR_CHARCOAL_HIGHLIGHT: #3a4049;
     --GREY_TEXT: #cbd4db;
     --GREY_TEXT_LABELS: #6e7782;
-    --WHITE: #ffffff; 
+    --WHITE: #ffffff;
     --ORANGE_FADE: #fe9c2a;
-    --RED_FADE: #fa5356; 
+    --RED_FADE: #fa5356;
     --GOLD: #fbbc00;
     --SKY_BLUE: #19aaf5;
     --VIOLET: #786dff;
@@ -16,6 +16,32 @@
     --GREY_GRID: #cbd4db;
     --GREY_HIGHLIGHT: #f5f8f9;
 }
+
+#modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: transparent;
+}
+
+#modal-content {
+  position: absolute;
+  background-color: transparent;
+}
+
 
 body {
     background-color: var(--WHITE);
@@ -34,12 +60,12 @@ body {
 
 .app-container {
     display: grid;
-    
+
     grid-template-areas:
     "header"
     "main"
     "footer";
-    
+
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 50px;
 
@@ -68,7 +94,7 @@ body {
     grid-template-areas:
       "sidebar tasks"
       "sidebar projects";
-      
+
     grid-template-columns: 275px 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
@@ -99,7 +125,7 @@ body {
     grid-template-areas:
       "sidebar table-header"
       "sidebar table-content";
-      
+
     grid-template-columns: 275px 1fr;
     grid-template-rows: 75px 1fr;
     grid-gap: 10px;
@@ -113,7 +139,7 @@ body {
     background-color: green;
     display: grid;
     grid-template-areas:
-      ". task-icon title-status . ."; 
+      ". task-icon title-status . .";
     grid-template-columns: 75px 100px 300px 1fr 1fr;
     grid-template-rows: 1fr;
     height: 100%;
@@ -134,7 +160,7 @@ body {
     grid-template-areas:
       "sidebar-nav"
       "sidebar-teams";
-      
+
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
@@ -159,7 +185,7 @@ body {
     grid-template-areas:
       "task-header"
       "task-table"
-      "."; 
+      ".";
     background-color: var(--CHARCOAL);
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 100px;
@@ -173,7 +199,7 @@ body {
 
     display: grid;
     grid-template-areas:
-      "add-task . filter sort ."; 
+      "add-task . filter sort .";
     grid-template-columns: 190px 1fr 50px 50px 100px;
     grid-template-rows: 1fr;
     height: 100%;
@@ -183,12 +209,12 @@ body {
 .task-container{
     grid-area: task-table;
     background-color: var(--ORANGE_FADE);
-    
+
     display: grid;
     grid-template-areas:
       "task-row-titles"
       "task-row-entries";
-      
+
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     max-height: 60vh;
@@ -323,7 +349,7 @@ input:focus {
 
 
 
-/* 
+/*
 
 REFERENCE CSS CODE FROM EBRITE
 
@@ -698,5 +724,5 @@ input.search-bar {
 
 input.search-bar:focus {
   border-bottom-color: var(--orange);
-} 
+}
 */
