cleaned up nav bar, added logo with redirect to home page, added nav bar grid layout, removed User and UserList components and routes

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -75,15 +75,6 @@ body {
 .header{
     grid-area: header;
     background-color: #151b26;
-
-    /* display: grid;
-    grid-template-areas:
-      "home-logo . links logout profile-icon"; 
-    grid-template-columns: 50px 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    height: 100%;
-    width: 100%;
-    line-height: 10px; */
 }
 
 .main{
@@ -277,6 +268,19 @@ td {
 a {
     color: var(--SKY_BLUE);
     text-decoration: none;
+}
+
+.nav-container {
+    display: grid;
+    grid-template-areas:
+      "logo-home . logout profile"; 
+    grid-template-columns: 200px 1fr 200px 100px;
+    grid-template-rows: 1fr;
+    height: 100%;
+    width: 100%;
+    line-height: 10px;
+    align-items: center;
+    text-align: center;
 }
 
 .nav-link {
