--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -114,9 +114,12 @@ body {
 
 .projects{
     grid-area: projects;
-    background-color: blue;
+    /* background-color: blue; */
+    display: flex;
+    padding-right: 50px;
+    padding-left: 50px;
+    justify-content: center;
 }
-
 
 /* PROFILE LAYOUT */
 
@@ -152,6 +155,14 @@ body {
     grid-area: table-content;
     margin: 10px;
     /* background-color: blue; */
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  text-transform: capitalize;
+  align-items: center;
+  margin: 20px;
 }
 
 
@@ -357,7 +368,11 @@ input:focus {
 
 
 
+/* MISC  */
 
+.capitalize {
+  text-transform: capitalize
+}
 
 
 
