Have working comments on modal.

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -58,7 +58,7 @@
   color: var(--CHARCOAL);
   text-align: left;
   font-size: 15px;
-  padding: 40px;
+  padding-left: 40px;
   border-radius: 10px;
   border: 1px solid var(--GREY_HIGHLIGHT);
   box-shadow: 1px 1px 20px 1px var(--WHITE);
@@ -66,6 +66,7 @@
 
 .taskDetailContent {
   overflow-y: scroll;
+  height: 400px;
 }
 
 body {
