Change style of dropdown, also changed button to a div.

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -81,6 +81,14 @@
   top: -10px;
 }
 
+#logout {
+  border-bottom: 1px solid var(--CHARCOAL);
+  border-right: 1px solid var(--CHARCOAL);
+  border-left: 1px solid var(--CHARCOAL) ;
+  width: 60px;
+  height: 20px;
+  padding: 5px;
+}
 body {
     background-color: var(--WHITE);
     color: var(--CHARCOAL);
