--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -17,7 +17,7 @@
     --GREY_HIGHLIGHT: #f5f8f9;
 }
 
-#modal {
+.modal {
   position: fixed;
   top: 0;
   right: 0;
@@ -28,7 +28,7 @@
   align-items: center;
 }
 
-#modal-background {
+.modal-background {
   position: fixed;
   top: 0;
   right: 0;
@@ -37,7 +37,7 @@
   background-color: transparent;
 }
 
-#modal-content {
+.modal-content {
   position: absolute;
   background-color: transparent;
 }
