--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -95,6 +95,7 @@ body {
     color: var(--CHARCOAL);
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
 
 
@@ -108,7 +109,6 @@ body {
 
 .app-container {
     display: grid;
-
     grid-template-areas:
     "header"
     "main"
@@ -116,7 +116,6 @@ body {
 
     grid-template-columns: 1fr;
     grid-template-rows: 50px 1fr 50px;
-
     height: 100vh;
 }
 
@@ -141,17 +140,51 @@ body {
     display: grid;
     grid-template-areas:
       "sidebar tasks"
-      "sidebar projects";
+      "sidebar my-projects";
 
     grid-template-columns: 275px 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 200px 1fr;
     grid-gap: 5px;
     height: 100%;
     width: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
 }
 
-.sidebar{
-    grid-area: sidebar;
+.my-projects{
+    grid-area: my-projects;
+    display: flex;
+    padding-left: 100px;
+}
+
+.my-project-wrap {
+    grid-area: my-projects;
+    display: flex;
+    overflow-x: scroll;
+    width: 70vw;
+    /* max-width: 60%; */
+
+}
+
+.project-card {
+  display: flex;
+  padding-left: 10px;
+  padding-right: 10px;
+  flex-direction: column;
+  text-transform: capitalize;
+  align-items: center;
+  margin: 10px 10px 0px 10px;
+  transition: background-color 400ms, color 400ms;
+}
+
+.project-card:hover {
+  background-color: var(--GREY_HIGHLIGHT);
+  border-radius: 10px;
+  color: var(--VIOLET);
+}
+
+.project-card h5 {
+  text-align: center;
 }
 
 .my-tasks{
@@ -169,6 +202,8 @@ body {
     padding-right: 5px;
     border-radius: 10px;
     flex-direction: column;
+    max-height: 125px;
+    overflow-y: scroll;
 }
 
 .my-task-row {
@@ -185,12 +220,8 @@ body {
     font-size: 14px;
 }
 
-.my-projects{
-    grid-area: projects;
-    display: flex;
-    padding-right: 50px;
-    padding-left: 50px;
-    justify-content: center;
+.sidebar{
+    grid-area: sidebar;
 }
 
 
@@ -225,14 +256,6 @@ body {
 .project-page-content{
     grid-area: table-content;
     margin: 10px;
-}
-
-.project-card {
-  display: flex;
-  flex-direction: column;
-  text-transform: capitalize;
-  align-items: center;
-  margin: 20px;
 }
 
 
@@ -529,7 +552,7 @@ input:focus {
 }
 
 .min-margin {
-  margin: 30px 0 10px 0;
+  margin: 20px 0 10px 0;
 }
 
 .profile-icon-container{
