--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -592,7 +592,21 @@ input:focus {
   font-size: 12px;
 }
 
+.team-title-button-div{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
 
+.user-multiselect{
+  display: flex;
+  flex-direction: row;
+  width:100%
+}
+.current-team-members{
+  color: #151b26;
+}
 
 
 
