--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -62,8 +62,15 @@ body {
 
 .profileContent {
   position: absolute;
-  right: 20px;
+  right: 18px;
+  top: 60px;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--GREY_GRID);
+  outline: none;
+  box-shadow: 1px 1px 5px 1px var(--GREY_GRID);
 }
 
 .taskDetailContainer {
@@ -182,9 +189,6 @@ body {
   width: 60px;
   height: 20px;
   padding: 5px;
-  border-right: 1px solid var(--SIDEBAR_CHARCOAL_HIGHLIGHT);
-  border-left: 1px solid var(--SIDEBAR_CHARCOAL_HIGHLIGHT);
-  border-bottom: 1px solid var(--SIDEBAR_CHARCOAL_HIGHLIGHT);
 }
 
 .dropDownDiv {
@@ -226,7 +230,7 @@ body {
     "footer";
 
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-rows: 55px 1fr 55px;
     height: 100vh;
 }
 
@@ -241,7 +245,28 @@ body {
 
 .footer{
     grid-area: footer;
-    background-color: var(--CHARCOAL)
+    background-color: var(--CHARCOAL);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-links {
+    display: flex;
+}
+
+.footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 50px;
+    font-size: 14px;
+}
+
+.footer-image {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 
@@ -258,7 +283,7 @@ body {
     grid-gap: 5px;
     height: 100%;
     width: 100%;
-    max-height: 100vh;
+    max-height: 100%;
     max-width: 100vw;
 }
 
